--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -7,7 +7,7 @@ header
 }
 .logo
 {
-    background: url("../images/logo.ng") no-repeat center;
+    background: url("../images/logo.png") no-repeat center;
     height: 60px;
     width: 142px;
     padding-left: 20px;
